# gb-mesh

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTES.md  README.md  gb-mesh.cabal
.github/workflows/: ci.yml  publish.yml
src/: GBMesh.hs
src/GBMesh/: Animate.hs  Boolean.hs  Buffer.hs  Combine.hs  Curve.hs  Deform.hs  DualContour.hs  Export.hs  Hull.hs  IK.hs  Icosphere.hs  Import.hs  Isosurface.hs  LOD.hs  Loft.hs  Morph.hs  Noise.hs  Pose.hs  Primitives.hs  Raycast.hs  Remesh.hs  SDF.hs  Scatter.hs  Simplify.hs  Skeleton.hs  Skin.hs  Smooth.hs  Subdivision.hs  Surface.hs  Symmetry.hs  Terrain.hs  Types.hs  UV.hs  Weld.hs
test/: Main.hs
