cabal-version: 3.0
name:          gb-mesh
version:       0.1.0.0
stability:     experimental
synopsis:      Procedural 3D mesh generation
description:
  A pure Haskell library for procedural 3D mesh generation.
  Parametric primitives, curves, surfaces, SDFs, noise, subdivision,
  deformation, skeletal animation, inverse kinematics, skinning,
  morph targets, and export to OBJ and glTF 2.0. No GPU dependency,
  no IO — just math.

license:       BSD-3-Clause
license-file:  LICENSE
author:        Devon Tomlin
maintainer:    devon.tomlin@novavero.ai
category:      Graphics
build-type:    Simple
tested-with:   GHC ==9.8.4
extra-doc-files: README.md CHANGELOG.md
homepage:      https://github.com/Gondola-Bros-Entertainment/gb-mesh
bug-reports:   https://github.com/Gondola-Bros-Entertainment/gb-mesh/issues

source-repository head
  type:     git
  location: https://github.com/Gondola-Bros-Entertainment/gb-mesh.git

library
  exposed-modules:
    GBMesh
    GBMesh.Animate
    GBMesh.Boolean
    GBMesh.Combine
    GBMesh.Curve
    GBMesh.Deform
    GBMesh.DualContour
    GBMesh.Export
    GBMesh.Hull
    GBMesh.Icosphere
    GBMesh.IK
    GBMesh.Import
    GBMesh.Isosurface
    GBMesh.LOD
    GBMesh.Loft
    GBMesh.Morph
    GBMesh.Noise
    GBMesh.Pose
    GBMesh.Primitives
    GBMesh.Raycast
    GBMesh.Remesh
    GBMesh.SDF
    GBMesh.Scatter
    GBMesh.Simplify
    GBMesh.Skeleton
    GBMesh.Skin
    GBMesh.Smooth
    GBMesh.Subdivision
    GBMesh.Surface
    GBMesh.Symmetry
    GBMesh.Terrain
    GBMesh.Types
    GBMesh.UV
    GBMesh.Weld
  default-language: GHC2021
  default-extensions:
    StrictData
  ghc-options:
    -Wall -Wcompat
  hs-source-dirs: src
  build-depends:
    base       >= 4.19 && < 5,
    array      >= 0.5  && < 0.6,
    containers >= 0.6  && < 0.8


test-suite gb-mesh-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-language: GHC2021
  default-extensions:
    StrictData
  ghc-options:
    -Wall -Wcompat
  build-depends:
    base             >= 4.19 && < 5,
    containers       >= 0.6  && < 0.8,
    gb-mesh,
    QuickCheck       >= 2.14 && < 3,
    tasty            >= 1.4  && < 2,
    tasty-quickcheck >= 0.10 && < 1
